--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+click==8.0.3
+dataclasses==0.8
 Flask==1.1.2
+Flask-PyMongo==2.3.0
 Flask-SQLAlchemy==2.4.4
+greenlet==1.1.2
+gunicorn==20.1.0
+importlib-metadata==4.8.1
 itsdangerous==1.1.0
 Jinja2==2.10.1
+MarkupSafe==2.0.1
+pymongo==3.12.1
 SQLAlchemy==1.3.22
+typing-extensions==3.10.0.2
 Werkzeug==1.0.1
+zipp==3.6.0
