--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
+blinker==1.4
+certifi==2021.10.8
+charset-normalizer==2.0.7
 click==8.0.3
 dataclasses==0.8
 Flask==1.1.2
+Flask-Mail==0.9.1
 Flask-PyMongo==2.3.0
 Flask-SQLAlchemy==2.4.4
 greenlet==1.1.2
 gunicorn==20.1.0
+idna==3.3
 importlib-metadata==4.8.1
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==2.0.1
 pymongo==3.12.1
+requests==2.26.0
 SQLAlchemy==1.3.22
 typing-extensions==3.10.0.2
+urllib3==1.26.7
 Werkzeug==1.0.1
 zipp==3.6.0
