--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+APScheduler==3.8.1
+backports.zoneinfo==0.2.1
 blinker==1.4
 certifi==2021.10.8
 charset-normalizer==2.0.7
@@ -11,13 +13,20 @@ greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.8.1
+importlib-resources==5.4.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==2.0.1
 pymongo==3.12.1
+pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
 requests==2.26.0
+schedule==1.1.0
+six==1.16.0
 SQLAlchemy==1.3.22
 typing-extensions==3.10.0.2
+tzdata==2021.5
+tzlocal==4.1
 urllib3==1.26.7
 Werkzeug==1.0.1
 zipp==3.6.0
